# advent-of-code

./: .gitignore  README.md
y2022/python/: pyproject.toml
y2022/python/d01/: solution.py  test_01.py
y2022/python/d02/: solution.py  test_02.py
y2022/python/template/d0X/: test_0X.py
y2022/rust/: main.rs
y2023/inputs/: test_d03_p.txt  test_results.csv
y2023/python/: pyproject.toml
y2023/python/src/: main.py  parse.py
y2023/python/src/aoc/: files.py  parse.py  solution.py  tools.py
y2023/python/src/common/: parse.py
y2023/python/src/d01/: solution.py
y2023/python/src/d02/: solution.py
y2023/python/src/d03/: solution.py
y2023/python/src/solutions/: d00.py  d01.py  d02.py  d03.py  d04.py
y2023/python/template/: solution.py
y2023/python/template/d0X/: solution.py
y2023/python/tests/: test_01.py  test_02.py  test_03.py
y2023/rust/: .gitignore  Cargo.toml
y2023/rust/src/: lib.rs  parsers.rs
