[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "python version of the AOC solutions"
authors = ["marcocofano <m.cofano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = [".", "src"]
testpaths = [
    "tests",
]

[tool.black]
color = true
line-length = 120
max-line-length = 120
target-version = ['py310']

[tool.ruff]
select = [
    "A",
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    # "D", pydocstyle
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "T", # flake8-print
    "W", # pycodestyle warnings
]
ignore = [
    "B008"
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.isort]
force-sort-within-sections = true
